[package]
name = "asa-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-mutex = "1.4"
async-channel = "2.1"
glob = "0.3"
orchestrator = { path = "./compiler/rust-base/orchestrator" }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8"
tar = "0.4"
tokio = { version = "1.35" }
tokio-util = "0.7"
tracing = "0.1"

#[build-dependencies]
#rust-playground-top-crates = { path = "../top-crates", version = "0.1.0" }
