[package]
name = "playground"
version = "0.0.1"
authors = ["The Rust Playground"]
resolver = "2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.dev]
codegen-units = 1
incremental = false

[profile.dev.build-override]
codegen-units = 1
debug = true

[profile.release]
codegen-units = 1
incremental = false

[profile.release.build-override]
codegen-units = 1
debug = false

[dependencies]
wasm-bindgen = "0.2.90"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
]
